--- a/database-gui/src/main/resources/fxml/Scene.fxml
+++ b/database-gui/src/main/resources/fxml/Scene.fxml
@@ -1,109 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <BorderPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jean.database.gui.controller.MainController">
     <top>
         <VBox>
-            <children>
-                <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
-                    <menus>
-                        <Menu fx:id="fileMenu" mnemonicParsing="false" text="文件">
-                            <items>
-                                <Menu fx:id="newConnectionMenu" mnemonicParsing="false" text="新建连接" />
-                                <MenuItem mnemonicParsing="false" text="打开连接" />
-                                <MenuItem mnemonicParsing="false" text="关闭连接" />
-                                <MenuItem mnemonicParsing="false" text="导出连接..." />
-                                <MenuItem mnemonicParsing="false" text="导入连接..." />
-                                <MenuItem mnemonicParsing="false" text="关闭" />
-                                <MenuItem mnemonicParsing="false" text="退出" />
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="查看">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="Delete" />
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="收藏夹">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="About" />
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="工具">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="About" />
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="窗口">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="About" />
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="帮助">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="About" />
-                            </items>
-                        </Menu>
-                    </menus>
-                </MenuBar>
-                <HBox alignment="CENTER_LEFT" spacing="10.0" style="-fx-border-color: #999;" VBox.vgrow="NEVER">
-                    <children>
-                        <MenuButton fx:id="connectionMenuButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="连接">
-                            <items>
-                                <MenuItem fx:id="newConnection" mnemonicParsing="false" text="新建连接" />
-                                <MenuItem mnemonicParsing="false" text="打开连接" />
-                            </items>
-                        </MenuButton>
-                        <ToggleButton mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="用户">
-                            <toggleGroup>
-                                <ToggleGroup fx:id="topbuttons" />
-                            </toggleGroup>
-                        </ToggleButton>
-                        <ToggleButton fx:id="tableButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="表" toggleGroup="$topbuttons" />
-                        <ToggleButton mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="视图" toggleGroup="$topbuttons" />
-                        <ToggleButton mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="函数" toggleGroup="$topbuttons" />
-                        <ToggleButton mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="事件" toggleGroup="$topbuttons" />
-                        <ToggleButton mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="查询" toggleGroup="$topbuttons" />
-                        <ToggleButton mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="报表" toggleGroup="$topbuttons" />
-                        <ToggleButton mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="备份" toggleGroup="$topbuttons" />
-                        <ToggleButton mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="计划" toggleGroup="$topbuttons" />
-                        <ToggleButton mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0" style="-fx-background-radius: 10;" text="模型" toggleGroup="$topbuttons" />
-                    </children>
-                    <VBox.margin>
-                        <Insets />
-                    </VBox.margin>
-                    <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                    </padding>
-                </HBox>
-            </children>
+            <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
+                <Menu fx:id="fileMenu" mnemonicParsing="false" text="文件">
+                    <Menu fx:id="newConnectionMenu" mnemonicParsing="false" text="新建连接"/>
+                    <MenuItem mnemonicParsing="false" text="打开连接"/>
+                    <MenuItem mnemonicParsing="false" text="关闭连接"/>
+                    <MenuItem mnemonicParsing="false" text="导出连接..."/>
+                    <MenuItem mnemonicParsing="false" text="导入连接..."/>
+                    <MenuItem mnemonicParsing="false" text="关闭"/>
+                    <MenuItem mnemonicParsing="false" text="退出"/>
+                </Menu>
+                <Menu mnemonicParsing="false" text="查看">
+                    <MenuItem mnemonicParsing="false" text="Delete"/>
+                </Menu>
+                <Menu mnemonicParsing="false" text="收藏夹">
+                    <MenuItem mnemonicParsing="false" text="Collections"/>
+                </Menu>
+                <Menu mnemonicParsing="false" text="工具">
+                    <MenuItem mnemonicParsing="false" text="Tools"/>
+                </Menu>
+                <Menu mnemonicParsing="false" text="窗口">
+                    <MenuItem mnemonicParsing="false" text="View"/>
+                </Menu>
+                <Menu mnemonicParsing="false" text="帮助">
+                    <MenuItem mnemonicParsing="false" text="Help"/>
+                </Menu>
+            </MenuBar>
+            <HBox alignment="CENTER_LEFT" spacing="10.0" style="-fx-border-color: #999;" VBox.vgrow="NEVER">
+                <VBox.margin>
+                    <Insets/>
+                </VBox.margin>
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </padding>
+                <MenuButton fx:id="connectionMenuButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0"
+                            style="-fx-background-radius: 10;" text="连接"/>
+                <ToggleButton mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0"
+                              style="-fx-background-radius: 10;" text="用户">
+                    <toggleGroup>
+                        <ToggleGroup fx:id="topbuttons"/>
+                    </toggleGroup>
+                </ToggleButton>
+                <ToggleButton fx:id="tableToggleButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0"
+                              style="-fx-background-radius: 10;" text="表" toggleGroup="$topbuttons"/>
+                <ToggleButton fx:id="viewToggleButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0"
+                              style="-fx-background-radius: 10;" text="视图" toggleGroup="$topbuttons"/>
+                <ToggleButton fx:id="functionToggleButton" mnemonicParsing="false" prefHeight="40.0"
+                              prefWidth="85.0" style="-fx-background-radius: 10;" text="函数"
+                              toggleGroup="$topbuttons"/>
+                <ToggleButton fx:id="eventToggleButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0"
+                              style="-fx-background-radius: 10;" text="事件" toggleGroup="$topbuttons"/>
+                <ToggleButton fx:id="queryToggleButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0"
+                              style="-fx-background-radius: 10;" text="查询" toggleGroup="$topbuttons"/>
+                <ToggleButton fx:id="reportToggleButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0"
+                              style="-fx-background-radius: 10;" text="报表" toggleGroup="$topbuttons"/>
+                <ToggleButton fx:id="backupToggleButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0"
+                              style="-fx-background-radius: 10;" text="备份" toggleGroup="$topbuttons"/>
+                <ToggleButton fx:id="plainToggleButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0"
+                              style="-fx-background-radius: 10;" text="计划" toggleGroup="$topbuttons"/>
+                <ToggleButton fx:id="modelToggleButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="85.0"
+                              style="-fx-background-radius: 10;" text="模型" toggleGroup="$topbuttons"/>
+            </HBox>
         </VBox>
     </top>
+    <center>
+        <SplitPane fx:id="splitPane" dividerPositions="0.2" nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
+            <TreeView fx:id="treeView" layoutY="30.0"/>
+            <TabPane fx:id="tablePane" prefHeight="200.0" prefWidth="200.0">
+                <Tab fx:id="objectTab" closable="false" text="   对象    ">
+                    <FlowPane fx:id="objectPane" hgap="10.0" layoutX="207.0" layoutY="120.0" orientation="VERTICAL" vgap="10.0">
+                        <padding>
+                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        </padding>
+                    </FlowPane>
+                </Tab>
+            </TabPane>
+        </SplitPane>
+    </center>
     <bottom>
         <HBox maxHeight="30.0" minHeight="30.0" prefHeight="30.0" style="-fx-border-color: #999;" BorderPane.alignment="CENTER_LEFT" />
     </bottom>
-    <center>
-        <SplitPane fx:id="splitPane" dividerPositions="0.2" nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
-            <items>
-                <TreeView fx:id="treeView" layoutY="30.0" />
-            <TabPane fx:id="tablePane" prefHeight="200.0" prefWidth="200.0">
-               <tabs>
-                  <Tab fx:id="objectTab" closable="false" text="   对象    ">
-                    <content>
-                        <FlowPane fx:id="objectPane" hgap="10.0" layoutX="207.0" layoutY="120.0" orientation="VERTICAL" vgap="10.0">
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </padding>
-                        </FlowPane>
-                    </content>
-                  </Tab>
-               </tabs>
-            </TabPane>
-            </items>
-        </SplitPane>
-    </center>
 </BorderPane>
