--- a/database-gui/src/main/resources/fxml/Scene.fxml
+++ b/database-gui/src/main/resources/fxml/Scene.fxml
@@ -15,13 +15,10 @@
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jean.database.gui.controller.MainController">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jean.database.gui.controller.MainController">
     <top>
         <VBox alignment="TOP_CENTER">
             <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
@@ -78,7 +75,7 @@
     <center>
         <SplitPane fx:id="splitPane" dividerPositions="0.2, 0.75" nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
             <TreeView fx:id="treeView" />
-            <TabPane fx:id="tablePane" tabClosingPolicy="ALL_TABS">
+            <TabPane fx:id="tablePane">
                 <Tab fx:id="objectTab" closable="false" text="对象">
                <content>
                   <TableView fx:id="objectTableView">
@@ -95,7 +92,7 @@
                </content>
                 </Tab>
             </TabPane>
-            <TabPane fx:id="infoPane" tabClosingPolicy="UNAVAILABLE">
+            <TabPane fx:id="infoPane">
                 <Tab fx:id="infoTab" closable="false" text="常规">
                <content>
                    <TableView fx:id="infoTableView">
