--- a/database-oracle/src/main/resources/fxml/oracle-conn-cfg.fxml
+++ b/database-oracle/src/main/resources/fxml/oracle-conn-cfg.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <TabPane xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <Tab text="常规">
+    <Tab text="常规" closable="false">
         <GridPane prefWidth="400.0">
             <columnConstraints>
                 <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="25.0"/>
@@ -41,7 +41,7 @@
                        GridPane.rowIndex="5"/>
         </GridPane>
     </Tab>
-    <Tab text="高级">
+    <Tab text="高级" closable="false">
         <GridPane>
             <columnConstraints>
                 <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="25.0"/>
