--- a/database-redis/src/main/resources/fxml/redis-conn-cfg.fxml
+++ b/database-redis/src/main/resources/fxml/redis-conn-cfg.fxml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-
-<TabPane xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jean.database.mysql.MySQLConfigurationController">
-    <Tab text="常规" closable="false">
-        <GridPane prefWidth="400.0">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<TabPane xmlns="http://javafx.com/javafx/10.0.2-internal"
+         xmlns:fx="http://javafx.com/fxml/1"
+         fx:controller="com.jean.database.redis.RedisConnectionConfigurationController">
+    <Tab closable="false" text="常规">
+        <GridPane>
             <columnConstraints>
                 <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="25.0"/>
                 <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="75.0"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="-Infinity" minHeight="30.0" prefHeight="30.0" vgrow="NEVER"/>
                 <RowConstraints maxHeight="-Infinity" minHeight="30.0" prefHeight="30.0" vgrow="NEVER"/>
                 <RowConstraints maxHeight="-Infinity" minHeight="30.0" prefHeight="30.0" vgrow="NEVER"/>
                 <RowConstraints maxHeight="-Infinity" minHeight="30.0" prefHeight="30.0" vgrow="NEVER"/>
@@ -32,16 +25,13 @@
             <TextField fx:id="host" promptText="localhost" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
             <Label text="端口" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
             <TextField fx:id="port" promptText="3306" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-            <Label text="用户名" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-            <TextField fx:id="user" promptText="root" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-            <Label text="密码" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
-            <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-            <Label text="其它参数" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
-            <TextField fx:id="properties" promptText="useUnicode=true&amp;useSSL=false" GridPane.columnIndex="1"
-                       GridPane.rowIndex="5"/>
+            <Label text="密码" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+            <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+            <Label text="其它参数" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+            <TextField fx:id="properties" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
         </GridPane>
     </Tab>
-    <Tab text="高级" closable="false">
+    <Tab closable="false" text="高级">
         <GridPane>
             <columnConstraints>
                 <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" percentWidth="25.0"/>
@@ -54,7 +44,7 @@
             <Label text="位置" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
             <TextField fx:id="location" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
             <Label text="编码" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-            <ComboBox fx:id="charset"  editable="true" prefWidth="150.0" promptText="UTF-8" GridPane.columnIndex="1"
+            <ComboBox fx:id="charset" editable="true" prefWidth="150.0" promptText="UTF-8" GridPane.columnIndex="1"
                       GridPane.rowIndex="1"/>
         </GridPane>
     </Tab>
