--- a/database-gui/src/main/resources/fxml/Scene.fxml
+++ b/database-gui/src/main/resources/fxml/Scene.fxml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="800.0" prefWidth="1280.0"
-            xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.jean.database.gui.controller.MainController">
+            prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jean.database.gui.controller.MainController">
     <top>
-        <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER"/>
+        <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
+            <Menu fx:id="file" mnemonicParsing="false" text="文件">
+                <MenuItem fx:id="setting" mnemonicParsing="false" text="设置"/>
+                <Menu fx:id="connections" mnemonicParsing="false" text="新建链接"/>
+                <MenuItem fx:id="exist" mnemonicParsing="false" text="退出"/>
+            </Menu>
+            <Menu fx:id="view" mnemonicParsing="false" text="查看"/>
+            <Menu fx:id="collections" mnemonicParsing="false" text="收藏"/>
+            <Menu fx:id="tools" mnemonicParsing="false" text="工具"/>
+            <Menu fx:id="window" mnemonicParsing="false" text="窗口"/>
+            <Menu fx:id="help" mnemonicParsing="false" text="帮助"/>
+        </MenuBar>
     </top>
     <center>
-        <SplitPane dividerPositions="0.2, 0.75" nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
+        <SplitPane dividerPositions="0.2" nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
             <TreeView fx:id="databaseTreeView"/>
             <TabPane fx:id="objectTabPan"/>
         </SplitPane>
     </center>
     <bottom>
-        <HBox maxHeight="30.0" minHeight="30.0" prefHeight="30.0" BorderPane.alignment="CENTER_LEFT"/>
+        <HBox fx:id="messageBox" maxHeight="30.0" minHeight="30.0" prefHeight="30.0" BorderPane.alignment="CENTER_LEFT"/>
     </bottom>
 </BorderPane>
